--- a/Views/components/header.html
+++ b/Views/components/header.html
@@ -1,10 +1,10 @@
-<nav class="navbar fixed-bottom navbar-expand-lg navbar-dark bg-black" id="mainNav">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-black" id="mainNav">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">VIRAJ SHAH </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse text-" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse h6" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="index.html" id="Home">Home</a>
