--- a/Views/components/header.html
+++ b/Views/components/header.html
@@ -1,24 +1,24 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-black" id="mainNav">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-black text-dark" id="mainNav">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">VIRAJ SHAH </a>
+      <a class="navbar-brand display-6" href="index.html">Viraj Shah; </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse h6" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse text-dark " id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <li class="nav-item pe-3">
             <a class="nav-link" aria-current="page" href="index.html" id="Home">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-3">
             <a class="nav-link" aria-current="page" href="about.html" id="About">About Us</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-3">
             <a class="nav-link" aria-current="page" href="projects.html" id="Projects">Our Projects</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-3">
             <a class="nav-link" aria-current="page" href="services.html" id="Services">Our Services</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item pe-3">
             <a class="nav-link" aria-current="page" href="contact.html" id="Contact">Contact Us</a>
           </li>
                                               
