Contact bug fixes

--- a/Content/app.css
+++ b/Content/app.css
@@ -1,3 +1,9 @@
+/*  File Name - app.css
+    Author - Viraj Shah
+    Description - Css styling for the website
+*/
+
+
 main{
     padding-top: 3%;
     /* background-color: #171717; */
